fixed styling. Elements were overflowing.

--- a/src/components/collections-overview/collections-overview.styles.scss
+++ b/src/components/collections-overview/collections-overview.styles.scss
@@ -1,3 +1,4 @@
 .collections-overview {
     display: flex;
+    flex-direction: column;
 }
